Add css and js library

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,6 +10,13 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
- *= require_tree .
+ *= require bootstrap/dist/css/bootstrap
+ *= require font-awesome/css/font-awesome
+ *= require simple-line-icons/css/simple-line-icons
+ *= require icon-hs/style
+ *= require hamburgers/dist/hamburgers
+ *= require animate.css/animate
+ *= require slick-carousel/slick/slick
+ *= require styles.op-architecture
  *= require_self
  */
