--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,53 +6,51 @@
        data-header-fix-moment-classes="light-theme u-theme-shadow-v1 g-bg-white g-py-10--md">
     <nav class="navbar navbar-expand-lg p-0 g-px-15">
       <div class="container g-pos-rel">
-        <a href="/" class="g-hidden-lg-up navbar-brand mr-0">
-          <img class="d-block g-width-140 g-width-160--md" src="assets/img/logo-light.png" alt="Image Description"
-               data-header-fix-moment-exclude="d-block"
-               data-header-fix-moment-classes="d-none">
 
-          <img class="d-none g-width-140 g-width-160--md" src="assets/img/logo-dark.png" alt="Image Description"
-               data-header-fix-moment-exclude="d-none"
-               data-header-fix-moment-classes="d-block">
-        </a>
+        <%= link_to '/', class: 'g-hidden-lg-up navbar-brand mr-0' do %>
+            <%= image_tag('logo-light.png', alt: 'Image Description', class:'d-block g-width-140 g-width-160--md',
+                          data: {'header-fix-moment-exclude': 'd-block', 'header-fix-moment-classes': 'd-none'}) %>
+            <%= image_tag('logo-dark.png', alt: 'Image Description', class:'d-none g-width-140 g-width-160--md',
+                          data: {'header-fix-moment-exclude': 'd-none', 'header-fix-moment-classes': 'd-block'}) %>
+        <% end %>
 
         <!-- Navigation -->
         <div class="collapse navbar-collapse align-items-center flex-sm-row" id="navBar">
           <ul class="js-scroll-nav navbar-nav align-items-lg-center text-uppercase g-font-weight-700 g-letter-spacing-1 g-font-size-12 g-pt-20 g-pt-0--lg mx-auto"
               data-splitted-breakpoint="992">
             <li class="nav-item g-mr-30--lg g-mb-7 g-mb-0--lg active">
-              <a href="#home" class="nav-link p-0">Home <span class="sr-only">(current)</span></a>
+              <%= link_to '#home', class: 'nav-link p-0' do %>
+                  Home <span class="sr-only">(current)</span>
+              <% end %>
             </li>
             <li class="nav-item g-mx-30--lg g-mb-7 g-mb-0--lg">
-              <a href="#about" class="nav-link p-0">About</a>
+              <%= link_to 'About', '#about', class: 'nav-link p-0' %>
             </li>
             <li class="nav-item g-mx-30--lg g-mb-7 g-mb-0--lg">
-              <a href="#projects" class="nav-link p-0">Projects</a>
+              <%= link_to 'Projects', '#projects', class: 'nav-link p-0' %>
             </li>
 
 
             <!-- Logo -->
             <li class="g-hidden-lg-down nav-logo-item g-mx-15--lg">
-              <a href="#!" class="js-go-to navbar-brand mr-0"
-                 data-type="static">
-                <img class="d-block g-width-140 g-width-160--md" src="assets/img/logo-light.png" alt="Image Description"
-                     data-header-fix-moment-exclude="d-block"
-                     data-header-fix-moment-classes="d-none">
 
-                <img class="d-none g-width-140 g-width-160--md" src="assets/img/logo-dark.png" alt="Image Description"
-                     data-header-fix-moment-exclude="d-none"
-                     data-header-fix-moment-classes="d-block">
-              </a>
+              <%= link_to '#!', class: 'js-go-to navbar-brand mr-0', data: {type: 'static'} do %>
+                  <%= image_tag('logo-light.png', alt: 'Image Description', class:'d-block g-width-140 g-width-160--md',
+                                data: {'header-fix-moment-exclude': 'd-block', 'header-fix-moment-classes': 'd-none'}) %>
+                  <%= image_tag('logo-dark.png', alt: 'Image Description', class:'d-none g-width-140 g-width-160--md',
+                                data: {'header-fix-moment-exclude': 'd-none', 'header-fix-moment-classes': 'd-block'}) %>
+              <% end %>
             </li>
             <!-- End Logo -->
+
             <li class="nav-item g-mx-25--lg g-mb-7 g-mb-0--lg">
-              <a href="#processes" class="nav-link p-0">Processes</a>
+              <%= link_to 'Processes', '#processes', class: 'nav-link p-0' %>
             </li>
             <li class="nav-item g-ml-25--lg">
-              <a href="#contact" class="nav-link p-0">Contact</a>
+              <%= link_to 'Contact', '#contact', class: 'nav-link p-0' %>
             </li>
             <li class="nav-item g-ml-40--lg">
-              <a href="#map" class="nav-link p-0">Location</a>
+              <%= link_to 'Location', '#map', class: 'nav-link p-0' %>
             </li>
           </ul>
         </div>
