--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,19 +20,12 @@
 
     <%= yield %>
 
-    <%= render 'layouts/footer' %>
+    <!-- render 'layouts/footer' %>-->
 
-    <a class="js-go-to u-go-to-v1" href="javascript:void(0);"
-       data-type="fixed"
-       data-position='{
-           "bottom": 15,
-           "right": 15
-         }'
-       data-offset-top="400"
-       data-compensation="#js-header"
-       data-show-effect="zoomIn">
-      <i class="hs-icon hs-icon-arrow-top"></i>
-    </a>
+    <%= link_to '#!', data: {type: 'fixed', position: '{bottom: 15, right: 15}', 'offset-top': '400',
+                             compensation: '#js-header', 'show-effect': 'zoomIn'} do %>
+        <i class="hs-icon hs-icon-arrow-top"></i>
+    <% end %>
 
   </main>
 
