Add missing js file and fix minor issues

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -5,7 +5,8 @@
       <div class="container text-center g-max-width-750 g-mb-70">
         <div class="text-uppercase u-heading-v2-4--bottom g-brd-primary">
           <h3 class="h3 g-letter-spacing-5 g-font-size-12 g-font-weight-400 g-color-primary g-mb-25">Contact us</h3>
-          <h2 class="u-heading-v2__title g-line-height-1 g-letter-spacing-2 g-font-size-30 g-font-size-40--md mb-0">Keep in touch</h2>
+          <h2 class="u-heading-v2__title g-line-height-1 g-letter-spacing-2 g-font-size-30 g-font-size-40--md mb-0">
+            Keep in touch</h2>
         </div>
       </div>
 
@@ -13,28 +14,34 @@
         <div class="col-md-9 g-mb-25 g-mb-0--md">
           <div class="row">
             <div class="col-sm-6 form-group g-mb-30">
-              <input id="inputGroup1_1" class="form-control g-font-size-14 g-theme-bg-gray-light-v2 g-brd-none g-rounded-1 g-py-14 g-px-10" type="text" placeholder="Your name">
+              <input id="inputGroup1_1" class="form-control g-font-size-14 g-theme-bg-gray-light-v2 g-brd-none
+              g-rounded-1 g-py-14 g-px-10" type="text" placeholder="Your name">
             </div>
 
             <div class="col-sm-6 form-group g-mb-30">
-              <input id="inputGroup1_2" class="form-control g-font-size-14 g-theme-bg-gray-light-v2 g-brd-none g-rounded-1 g-py-14 g-px-10" type="tel" placeholder="Your phone">
+              <input id="inputGroup1_2" class="form-control g-font-size-14 g-theme-bg-gray-light-v2 g-brd-none
+              g-rounded-1 g-py-14 g-px-10" type="tel" placeholder="Your phone">
             </div>
 
             <div class="col-sm-6 form-group g-mb-30">
-              <input id="inputGroup1_3" class="form-control g-font-size-14 g-theme-bg-gray-light-v2 g-brd-none g-rounded-1 g-py-14 g-px-10" type="email" placeholder="Email *">
+              <input id="inputGroup1_3" class="form-control g-font-size-14 g-theme-bg-gray-light-v2 g-brd-none
+              g-rounded-1 g-py-14 g-px-10" type="email" placeholder="Email *">
             </div>
 
             <div class="col-sm-6 form-group g-mb-30">
-              <input id="inputGroup1_4" class="form-control g-font-size-14 g-theme-bg-gray-light-v2 g-brd-none g-rounded-1 g-py-14 g-px-10" type="text" placeholder="Subject">
+              <input id="inputGroup1_4" class="form-control g-font-size-14 g-theme-bg-gray-light-v2 g-brd-none
+              g-rounded-1 g-py-14 g-px-10" type="text" placeholder="Subject">
             </div>
 
             <div class="col-md-12 form-group g-mb-30">
-              <textarea id="inputGroup1_5" class="form-control g-resize-none g-font-size-14 g-theme-bg-gray-light-v2 g-brd-none g-rounded-1 g-py-14 g-px-10" rows="4" placeholder="Message"></textarea>
+              <textarea id="inputGroup1_5" class="form-control g-resize-none g-font-size-14 g-theme-bg-gray-light-v2
+              g-brd-none g-rounded-1 g-py-14 g-px-10" rows="4" placeholder="Message"></textarea>
             </div>
           </div>
 
           <div class="text-center">
-            <button class="btn u-btn-primary btn-md text-uppercase g-line-height-1 g-font-weight-700 g-font-size-11 rounded-0 g-py-12 g-px-25 mb-0" type="submit" role="button">Send message</button>
+            <button class="btn u-btn-primary btn-md text-uppercase g-line-height-1 g-font-weight-700 g-font-size-11
+            rounded-0 g-py-12 g-px-25 mb-0" type="submit" role="button">Send message</button>
           </div>
         </div>
 
@@ -79,22 +86,30 @@
                  ["water", "", [{"color":"#f7f4f4"}]]
                ]'
            data-pin="true"
-           data-pin-icon="assets/img/pin.png"></div>
+           data-pin-icon="<%= image_path 'pin.png' %>"></div>
     </div>
   </div>
   <!-- End Google (Map) [custom] -->
 
   <div class="text-center g-color-gray-dark-v5 g-theme-bg-blue-dark-v1 g-py-70">
-    <a class="d-block g-width-140 mx-auto g-mb-30">
-      <img class="img-fluid" src="assets/img/logo.png" alt="Image description">
-    </a>
+    <%= link_to 'javascript:void(0);', class: 'd-block g-width-140 mx-auto g-mb-30' do %>
+        <%= image_tag 'logo.png', alt: 'Image Description', class: 'img-fluid' %>
+    <% end %>
 
     <ul class="list-inline d-inline-block mb-0">
       <li class="list-inline-item g-mr-10">
-        <a class="u-icon-v3 g-width-35 g-height-35 g-font-size-16 g-color-gray-dark-v5 g-color-white--hover g-theme-bg-blue-dark-v2 g-bg-primary--hover g-transition-0_2 g-transition--ease-in" href="https://www.facebook.com/ronslandscape/"><i class="fa fa-facebook"></i></a>
+        <%= link_to 'https://www.facebook.com/ronslandscape/', class: 'u-icon-v3 g-width-35 g-height-35 g-font-size-16
+        g-color-gray-dark-v5 g-color-white--hover g-theme-bg-blue-dark-v2 g-bg-primary--hover g-transition-0_2
+        g-transition--ease-in' do %>
+            <i class="fa fa-facebook"></i>
+        <% end %>
       </li>
       <li class="list-inline-item">
-        <a class="u-icon-v3 g-width-35 g-height-35 g-font-size-16 g-color-gray-dark-v5 g-color-white--hover g-theme-bg-blue-dark-v2 g-bg-primary--hover g-transition-0_2 g-transition--ease-in" href="https://www.instagram.com/ronslandscape/"><i class="fa fa-instagram"></i></a>
+        <%= link_to 'https://www.instagram.com/ronslandscape/', class: 'u-icon-v3 g-width-35 g-height-35 g-font-size-16
+        g-color-gray-dark-v5 g-color-white--hover g-theme-bg-blue-dark-v2 g-bg-primary--hover g-transition-0_2
+        g-transition--ease-in' do %>
+            <i class="fa fa-instagram"></i>
+        <% end %>
       </li>
     </ul>
   </div>
