Use popper.js/dist/umd/popper instead of popper.js/dist/popper and fix link with #! which was logging error in console

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -34,7 +34,7 @@
             <!-- Logo -->
             <li class="g-hidden-lg-down nav-logo-item g-mx-15--lg">
 
-              <%= link_to '#!', class: 'js-go-to navbar-brand mr-0', data: {type: 'static'} do %>
+              <%= link_to '/', class: 'js-go-to navbar-brand mr-0', data: {type: 'static'} do %>
                   <%= image_tag('logo-light.png', alt: 'Image Description', class:'d-block g-width-140 g-width-160--md',
                                 data: {'header-fix-moment-exclude': 'd-block', 'header-fix-moment-classes': 'd-none'}) %>
                   <%= image_tag('logo-dark.png', alt: 'Image Description', class:'d-none g-width-140 g-width-160--md',
