--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
 
     <%=render 'layouts/footer' %>
 
-    <%= link_to '#!', data: {type: 'fixed', position: '{bottom: 15, right: 15}', 'offset-top': '400',
+    <%= link_to '#', data: {type: 'fixed', position: '{bottom: 15, right: 15}', 'offset-top': '400',
                              compensation: '#js-header', 'show-effect': 'zoomIn'} do %>
         <i class="hs-icon hs-icon-arrow-top"></i>
     <% end %>
