--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,10 +28,17 @@
 
     <%=render 'layouts/footer' %>
 
-    <%= link_to '#', data: {type: 'fixed', position: '{bottom: 15, right: 15}', 'offset-top': '400',
-                             compensation: '#js-header', 'show-effect': 'zoomIn'} do %>
-        <i class="hs-icon hs-icon-arrow-top"></i>
-    <% end %>
+    <a class="js-go-to u-go-to-v1" href="#"
+       data-type="fixed"
+       data-position='{
+           "bottom": 15,
+           "right": 15
+         }'
+       data-offset-top="400"
+       data-compensation="#js-header"
+       data-show-effect="zoomIn">
+      <i class="hs-icon hs-icon-arrow-top"></i>
+    </a>
 
   </main>
 
