--- a/lib/assets/stylesheets/icon-hs/style.scss
+++ b/lib/assets/stylesheets/icon-hs/style.scss
@@ -1,9 +1,9 @@
 @font-face {
   font-family: 'hs-icons';
   src:
-    url('fonts/hs-icons.ttf?xa77py') format('truetype'),
-    url('fonts/hs-icons.woff?xa77py') format('woff'),
-    url('fonts/hs-icons.svg?xa77py#hs-icons') format('svg');
+    url(asset-path('icon-hs/fonts/hs-icons.ttf?xa77py')) format('truetype'),
+    url(asset-path('icon-hs/fonts/hs-icons.woff?xa77py')) format('woff'),
+    url(asset-path('icon-hs/fonts/hs-icons.svg?xa77py#hs-icons')) format('svg');
   font-weight: normal;
   font-style: normal;
 }
