--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -12,37 +12,44 @@
 
       <div class="row">
         <div class="col-md-9 g-mb-25 g-mb-0--md">
-          <div class="row">
-            <div class="col-sm-6 form-group g-mb-30">
-              <input id="inputGroup1_1" class="form-control g-font-size-14 g-theme-bg-gray-light-v2 g-brd-none
-              g-rounded-1 g-py-14 g-px-10" type="text" placeholder="Your name">
-            </div>
 
-            <div class="col-sm-6 form-group g-mb-30">
-              <input id="inputGroup1_2" class="form-control g-font-size-14 g-theme-bg-gray-light-v2 g-brd-none
-              g-rounded-1 g-py-14 g-px-10" type="tel" placeholder="Your phone">
-            </div>
+          <%= form_for :contact_us, url: 'contact-us', remote: true do |form| %>
 
-            <div class="col-sm-6 form-group g-mb-30">
-              <input id="inputGroup1_3" class="form-control g-font-size-14 g-theme-bg-gray-light-v2 g-brd-none
-              g-rounded-1 g-py-14 g-px-10" type="email" placeholder="Email *">
-            </div>
+              <div class="row">
+                <div class="col-sm-6 form-group g-mb-30">
+                  <%= form.text_field :name, id: 'inputGroup1_1', class: 'form-control g-font-size-14
+                  g-theme-bg-gray-light-v2 g-brd-none g-rounded-1 g-py-14 g-px-10', placeholder: 'Your name' %>
+                </div>
 
-            <div class="col-sm-6 form-group g-mb-30">
-              <input id="inputGroup1_4" class="form-control g-font-size-14 g-theme-bg-gray-light-v2 g-brd-none
-              g-rounded-1 g-py-14 g-px-10" type="text" placeholder="Subject">
-            </div>
+                <div class="col-sm-6 form-group g-mb-30">
+                  <%= form.telephone_field :phone, id: 'inputGroup1_2', class: 'form-control g-font-size-14
+                  g-theme-bg-gray-light-v2 g-brd-none g-rounded-1 g-py-14 g-px-10', placeholder: 'Your phone' %>
+                </div>
 
-            <div class="col-md-12 form-group g-mb-30">
-              <textarea id="inputGroup1_5" class="form-control g-resize-none g-font-size-14 g-theme-bg-gray-light-v2
-              g-brd-none g-rounded-1 g-py-14 g-px-10" rows="4" placeholder="Message"></textarea>
-            </div>
-          </div>
+                <div class="col-sm-6 form-group g-mb-30">
+                  <%= form.email_field :email, id: 'inputGroup1_3', class: 'form-control g-font-size-14
+                  g-theme-bg-gray-light-v2 g-brd-none g-rounded-1 g-py-14 g-px-10', placeholder: 'Email *',
+                                       required: true %>
+                </div>
 
-          <div class="text-center">
-            <button class="btn u-btn-primary btn-md text-uppercase g-line-height-1 g-font-weight-700 g-font-size-11
-            rounded-0 g-py-12 g-px-25 mb-0" type="submit" role="button">Send message</button>
-          </div>
+                <div class="col-sm-6 form-group g-mb-30">
+                  <%= form.text_field :subject, id: 'inputGroup1_4', class: 'form-control g-font-size-14
+                  g-theme-bg-gray-light-v2 g-brd-none g-rounded-1 g-py-14 g-px-10', placeholder: 'Subject' %>
+                </div>
+
+                <div class="col-md-12 form-group g-mb-30">
+                  <%= form.text_area :message, id: 'inputGroup1_5', class: 'form-control g-resize-none g-font-size-14
+                  g-theme-bg-gray-light-v2 g-brd-none g-rounded-1 g-py-14 g-px-10', placeholder: 'Message', rows: 4 %>
+                </div>
+              </div>
+
+              <div class="text-center">
+                <%= form.button 'Send Message', class: 'btn u-btn-primary btn-md text-uppercase g-line-height-1
+                g-font-weight-700 g-font-size-11 rounded-0 g-py-12 g-px-25 mb-0', role: 'button', name: 'submit' %>
+              </div>
+
+          <% end %>
+
         </div>
 
         <div class="col-md-3">
