--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -41,6 +41,10 @@
                   <%= form.text_area :message, id: 'inputGroup1_5', class: 'form-control g-resize-none g-font-size-14
                   g-theme-bg-gray-light-v2 g-brd-none g-rounded-1 g-py-14 g-px-10', placeholder: 'Message', rows: 4 %>
                 </div>
+
+                <div class="col-sm-6 form-group g-mb-30">
+                  <%= recaptcha_tags %>
+                </div>
               </div>
 
               <div class="text-center">
