--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -13,7 +13,7 @@
       <div class="row">
         <div class="col-md-9 g-mb-25 g-mb-0--md">
 
-          <%= form_for :contact_us, url: 'contact-us', remote: true do |form| %>
+          <%= form_for :contact_us, url: 'contact-us', remote: true, html: {id:'contact-us-form'} do |form| %>
 
               <div class="row">
                 <div class="col-sm-6 form-group g-mb-30">
@@ -126,3 +126,23 @@
   </div>
 </footer>
 <!-- End Footer -->
+
+<!--Modal-->
+<div class="modal fade" id="contact-us-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="contact-us-modal-title">Modal title</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body" id="contact-us-modal-message">
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Done</button>
+      </div>
+    </div>
+  </div>
+</div>
+<!--End Modal-->
