--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -49,7 +49,8 @@
 
               <div class="text-center">
                 <%= form.button 'Send Message', class: 'btn u-btn-primary btn-md text-uppercase g-line-height-1
-                g-font-weight-700 g-font-size-11 rounded-0 g-py-12 g-px-25 mb-0', role: 'button', name: 'submit' %>
+                g-font-weight-700 g-font-size-11 rounded-0 g-py-12 g-px-25 mb-0', role: 'button', name: 'submit',
+                                data: {disable_with: 'Sending...'} %>
               </div>
 
           <% end %>
